--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
               <div class="card border border-light-subtle rounded-3 shadow-sm">
                 <div class="card-body p-3 p-md-4 p-xl-5">
                   <div class="text-center mb-3">
-                    <a href="#!">
+                    <a href="index.html">
                       <img src="White.jpeg" alt="BootstrapBrain Logo" width="175" height="57">
                     </a>
                   </div>
